add start game button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         first two letters indicate [O]pen or [C]losed state for each hand
       </p>
     </div>
+    <div class="start-game">
+      <button id="start" onclick="main()">Start the game</button>
+    </div>
 
     <div class="form">
       <p id="textField"></p>
