--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="instruction">
       <p><b>Instruction</b></p>
       <p>
-        if you are the predictor enter the input in this CC3 format where the
+        If you are the predictor enter the input in this CC3 format where the
         first two letters indicate [O]pen or [C]losed state for each hand,
         followed by the prediction (0-4)
       </p>
       <p>
-        if you are not the predictor enter the input in this CO format where the
+        If you are not the predictor enter the input in this CO format where the
         first two letters indicate [O]pen or [C]losed state for each hand
       </p>
     </div>
